<resources>

    <string name="gps_network_not_enabled">Bạn có muốn bật GPS không?</string>
    <string name="open_location_settings">Bật GPS</string>
    <string name="Cancel">Thoát</string>
    <string name="note_list_empty">Bạn không có ghi chú nào</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save_note">Lưu ghi chú</string>
    <string name="delete_note">Xóa</string>
    <string name="edit_note">Sửa</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Tài khoản</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_up">Đăng ký</string>
    <string name="app_name">Bship</string>
    <string name="slogan">Fast and Easy</string>
    <string name="btn_getOrder_name">Nhận</string>
    <string name="error">Không thể kết nối</string>
    <string name="sub_error">Chạm để thử lại</string>
    <string name="search">Tìm kiếm</string>
    <string name="get_notifications">Nhận thông báo đơn hàng</string>

    <string name="connect_error_title">Lỗi kết nối</string>
    <string name="connect_error_message">Rất tiếc không thể kết nối tới máy chủ,
        xin vui lòng kiểm ra lại kết nối internet của bạn.</string>
    <string name="complete">Hoàn thành</string>
    <string name="plan">Lịch trình</string>
    <string name="radius">1 km</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="receiving">Đang nhận hàng...</string>
    <string name="about">Nhóm project 3 thầy Ngyuyễn Bình Minh</string>


    <string-array name="svg_strings">
        <item>m144.45,71.86c-0.48,-0.66 -1.21,-1.04 -1.98,-1.02 -6.2,0.16 -11.89,-0.43 -16.84,-1.35 -5.5,-1.02 -10.69,-3.13 -15.51,-6.14 -13.62,3.82 -26.73,5.93 -27.49,6.05 -0.22,0.04 -0.45,0.05 -0.68,0.05 -1.11,0 -2.19,-0.43 -3.06,-1.22 -1.04,-0.95 -1.67,-2.35 -1.73,-3.85 -0,-0.12 -0.11,-3.84 0.92,-9.34 1.75,-9.37 6.9,-23.88 21.43,-34.72 -2.37,-6.54 -6.53,-12.02 -8.95,-14.85 -0.35,-0.41 -0.87,-0.58 -1.37,-0.44 -0.49,0.14 -0.88,0.56 -1.02,1.1 -2.05,8.29 -8.26,14.55 -8.26,14.55 -8.03,9.57 -10.95,18.83 -11.58,26.6 -2.95,-4.08 -7.43,-6.74 -12.51,-6.74 -6.36,0 -11.82,4.1 -14.41,10.03 -1.1,2.52 -2.46,4.87 -4,7.07 -0.89,-2.87 -2.03,-5.77 -3.25,-8.66 3.38,1.3 6.94,-0.6 7.55,-4.6 0.82,-4.07 -4.51,-17.14 -4.68,-17.05 0.05,0.07 -6.24,8.67 -6.95,12.49 -1.94,-3.93 -4.05,-7.59 -6.13,-10.86 0.32,0.14 0.62,0.34 0.97,0.41 2.71,0.55 5.05,-1.5 5.06,-4.81 0.14,-3.37 -5.59,-13.05 -5.69,-12.97 0.04,0.04 -4.31,8.26 -4.35,11.41 -1.32,-1.85 -2.54,-3.46 -3.6,-4.81 1.62,-1.87 1.65,-5.08 -0.24,-7.5C14.07,7.92 4.99,5.16 5,5.29c0.12,0.02 2.27,9.82 3.99,12.2 1.72,2.19 4.44,2.78 6.47,1.48 0.87,1.39 1.85,3.01 2.91,4.87 -2.99,-0.79 -10.27,1.85 -10.24,1.9 0.08,-0.06 5.6,7.38 8,8.59 2.48,1.1 5.35,-0.3 6.18,-3.17 1.57,3.12 3.14,6.52 4.59,10.09 -3.56,-1.46 -12.44,0.27 -12.41,0.34 0.13,-0.08 5.34,9.71 7.96,11.68 2.7,1.81 6.35,1.08 7.93,-2.04 0.86,2.87 1.67,5.73 2.4,8.46 0.27,0.93 0.52,1.78 0.78,2.68 -0.9,0.94 -1.83,1.85 -2.81,2.68l-1,0.84c-0.32,0.27 -0.45,0.74 -0.32,1.16 0.13,0.42 0.49,0.71 0.9,0.71l2.07,0c0.95,0 1.88,0.12 2.82,0.24 0.31,1.05 0.63,2.13 0.91,3.1 1.93,6.75 3.4,11.42 3.42,11.42 0.03,0.1 0.1,0.18 0.19,0.2 0.15,0.03 0.27,-0.08 0.29,-0.26 -0.02,0.01 0.64,-4.96 -0.14,-12.25 -0.04,-0.37 -0.13,-0.8 -0.17,-1.19 2.41,0.85 4.7,2.12 6.79,3.79 2.49,2 5.54,3.18 8.83,3.3 2.52,11.06 14.95,22.47 29.95,22.47 11.55,0 21.59,-4.63 26.75,-11.47 0.82,-1.09 2.24,-1.35 3.34,-0.61 7.9,5.32 15.18,13.1 19.13,17.66 0.62,0.72 1.55,1.01 2.42,0.75 0.87,-0.26 1.54,-1.02 1.76,-1.99l6.27,-28.7c0.18,-0.82 0,-1.69 -0.48,-2.35z</item>
        <item>m81.95,64.15c0,0 25.48,-4.04 42.18,-11.08 16.7,-7.04 15.95,-36.33 13.6,-46.26 -0.17,-0.7 -0.66,-1.25 -1.3,-1.43 -0.15,-0.04 -0.31,-0.07 -0.46,-0.07 -0.48,0 -0.95,0.22 -1.3,0.61 -6.95,7.93 -17.45,10.73 -17.45,10.73 -36.71,13.46 -35.28,47.49 -35.28,47.49z</item>

    </string-array>
</resources>
