<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimary"
    tools:context="com.example.mrt.ship.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/icon_login_form"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/app_icon"
                    android:src="@drawable/ic_app"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/app_name"
                    android:textSize="22sp"
                    android:textColor="#ffffff"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/slogan"
                    android:text="@string/slogan"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!-- Login progress -->
                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_form"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/username"
                    android:textSize="16sp"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/text_hint_color"
                    android:hint="@string/prompt_username"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/password"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/text_hint_color"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-light"
                    android:textColorHint="@color/text_hint_color"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/name"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-light"
                    android:textColorHint="@color/text_hint_color"
                    android:hint="Họ tên"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/phone"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-light"
                    android:textColorHint="@color/text_hint_color"
                    android:hint="Số điện thoại"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/address"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-light"
                    android:textColorHint="@color/text_hint_color"
                    android:hint="Địa chỉ"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/account"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:fontFamily="sans-serif-light"
                    android:textColorHint="@color/text_hint_color"
                    android:hint="Số tài khoản"
                    android:maxLines="1" />


                <Button
                    android:id="@+id/submit_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:background="@drawable/ripple"
                    android:layout_width="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_up" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>